# rust-backend-template

./: Cargo.toml  README.md
src/: main.rs
src/routes/: mod.rs
